L'erreur de la méthode getbackground est résolu dans les calsse de JEI.